--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,6 +2,9 @@
 
 {{ define "main" }}
 
+<!-- nicomo: adds hypothesis web commenting / annotation to the page -->
+<script src="https://hypothes.is/embed.js" async></script>
+
 <header class="site-header">
     {{- partial "site-header.html" $ -}}
 </header>
