--- a/layouts/partials/subscribe.html
+++ b/layouts/partials/subscribe.html
@@ -2,7 +2,7 @@
 <div id="mc_embed_signup">
     <form action="https://nicolasmorin.us4.list-manage.com/subscribe/post?u=066f0590517f98ac2c360411d&amp;id=fe77533f51" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll">
-            <p>Les abonnés reçoivent ce que je publie ici + des textes de fiction exclusifs à la <em>newsletter</em> 🚀</p>
+            <p>Les abonnés reçoivent uniquement la partie <em>littéraire</em> de ce site : 🍴 Cuisine + 🚀 Récits et fictions courtes</p>
 
             <div class="mc-field-group">
                 <label for="EMAIL">e-mail</label>
