add custom rss feed

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -22,6 +22,12 @@
         <link rel="stylesheet" href="{{ . | absURL }}">
     {{- end }}
 
+    <!-- nicomo: add RSS feed -->
+    {{ with .OutputFormats.Get "rss" -}}
+        {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+    {{ end -}}
+
+
 </head>
 <body class="{{ block "body_class" . }} {{ end }}">
 
